--- a/index.css
+++ b/index.css
@@ -267,6 +267,15 @@ img {
   margin-top: 20px;
   text-align: left;
 }
+#sun-rise{
+    text-align:center;
+    font-size: 20px;
+}
+#sun-set{
+    text-align: center;
+    font-size: 20px;
+}
+
 .credits {
   text-align: center;
   font-size: 12px;
